--- a/day1/day1_practice.ipynb
+++ b/day1/day1_practice.ipynb
@@ -59,13 +59,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "AIXMavdDEP8U"
+        "id": "AIXMavdDEP8U",
+        "outputId": "607e71d7-f5ec-4c2d-8be8-cd68cb479ac1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'lecture-ai-engineering'...\n",
+            "remote: Enumerating objects: 44, done.\u001b[K\n",
+            "remote: Counting objects: 100% (32/32), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (27/27), done.\u001b[K\n",
+            "remote: Total 44 (delta 7), reused 5 (delta 5), pack-reused 12 (from 2)\u001b[K\n",
+            "Receiving objects: 100% (44/44), 254.47 KiB | 21.21 MiB/s, done.\n",
+            "Resolving deltas: 100% (7/7), done.\n"
+          ]
+        }
+      ],
       "source": [
-        "!git clone https://github.com/matsuolab/lecture-ai-engineering.git"
+        "!git clone https://github.com/SomoSomo0712/lecture-ai-engineering.git"
       ]
     },
     {
@@ -115,11 +133,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "bvEowFfg5lrq"
+        "id": "bvEowFfg5lrq",
+        "outputId": "90813501-3981-4d37-dc20-3dd1ae9f9634",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting python-dotenv\n",
+            "  Downloading python_dotenv-1.1.0-py3-none-any.whl.metadata (24 kB)\n",
+            "Downloading python_dotenv-1.1.0-py3-none-any.whl (20 kB)\n",
+            "Installing collected packages: python-dotenv\n",
+            "Successfully installed python-dotenv-1.1.0\n",
+            "/content/lecture-ai-engineering/day1\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
         "!pip install python-dotenv\n",
         "from dotenv import load_dotenv, find_dotenv\n",
@@ -274,11 +319,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "UeEjlJ7uELSO"
+        "id": "UeEjlJ7uELSO",
+        "outputId": "f4194e40-06b3-40ca-84c9-471bef85ca03",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/lecture-ai-engineering/day1/02_streamlit_app\n"
+          ]
+        }
+      ],
       "source": [
         "%cd /content/lecture-ai-engineering/day1/02_streamlit_app"
       ]
@@ -294,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "mDqvI4V3ELSO"
       },
@@ -315,11 +372,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "jPxTiEWQELSO"
+        "id": "jPxTiEWQELSO",
+        "outputId": "49048b15-14b7-4bd0-f6f9-cd644e87d0f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Authtoken saved to configuration file: /root/.config/ngrok/ngrok.yml\n",
+            "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
+            "Token is valid (permission: read).\n",
+            "The token `Tokyo_uni_AI_lecture` has been saved to /root/.cache/huggingface/stored_tokens\n",
+            "Your token has been saved to /root/.cache/huggingface/token\n",
+            "Login successful.\n",
+            "The current active token is: `Tokyo_uni_AI_lecture`\n"
+          ]
+        }
+      ],
       "source": [
         "!ngrok authtoken $$NGROK_TOKEN\n",
         "!huggingface-cli login --token $$HUGGINGFACE_TOKEN"
@@ -336,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "W184-a7qFP0W"
       },
@@ -376,11 +451,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "TBQyTTWTELSP"
+        "id": "TBQyTTWTELSP",
+        "outputId": "a969a81c-451b-4c87-8047-ee5db1f3bb18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "公開URL: https://6d28-35-240-184-211.ngrok-free.app\n",
+            "\n",
+            "Collecting usage statistics. To deactivate, set browser.gatherUsageStats to false.\n",
+            "\u001b[0m\n",
+            "\u001b[0m\n",
+            "\u001b[34m\u001b[1m  You can now view your Streamlit app in your browser.\u001b[0m\n",
+            "\u001b[0m\n",
+            "\u001b[34m  Local URL: \u001b[0m\u001b[1mhttp://localhost:8501\u001b[0m\n",
+            "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.28.0.12:8501\u001b[0m\n",
+            "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://35.240.184.211:8501\u001b[0m\n",
+            "\u001b[0m\n",
+            "\u001b[34m  Stopping...\u001b[0m\n",
+            "\u001b[34m  Stopping...\u001b[0m\n",
+            "^C\n"
+          ]
+        }
+      ],
       "source": [
         "from pyngrok import ngrok\n",
         "\n",
@@ -391,7 +491,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Y-XGHGTyVXRa"
+      },
       "source": [
         "アプリケーションの機能としては、チャット機能や履歴閲覧があります。\n",
         "\n",
@@ -418,7 +520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "WFJC2TmZELSP"
       },
@@ -555,7 +657,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -563,7 +666,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
